--- a/UI.MVC/Views/Person/Create.cshtml
+++ b/UI.MVC/Views/Person/Create.cshtml
@@ -17,6 +17,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.AntiForgeryToken()
             <div class="form-group">
                 <label asp-for="NewPerson.Prefix" class="control-label"></label>
                 <input asp-for="NewPerson.Prefix" class="form-control" />
@@ -49,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="NewPerson.DepartmentId" class="control-label"></label>
-                <select asp-for="NewPerson.DepartmentId" asp-items="@Model.Departments.Select(d=>new SelectListItem{Value=d.Id.ToString(),Text=d.Title})" class="form-control"></select>
+                <select asp-for="NewPerson.DepartmentId" asp-items="@Model.Departments" class="form-control"></select>
                 <span asp-validation-for="NewPerson.DepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
