--- a/UI.MVC/Views/Person/Create.cshtml
+++ b/UI.MVC/Views/Person/Create.cshtml
@@ -15,7 +15,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.AntiForgeryToken()
             <div class="form-group">
@@ -52,6 +52,10 @@
                 <label asp-for="NewPerson.DepartmentId" class="control-label"></label>
                 <select asp-for="NewPerson.DepartmentId" asp-items="@Model.Departments" class="form-control"></select>
                 <span asp-validation-for="NewPerson.DepartmentId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="ProfilePicture" class="control-label">Profile Picture</label>
+                <input type="file" id="ProfilePicture" name="ProfilePicture" class="form-control" accept="image/png, image/jpeg" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
