--- a/UI.MVC/Views/Shared/_Layout.cshtml
+++ b/UI.MVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <partial name="_CultureSwitcher" />
                 </div>
             </div>
         </nav>
